认证中心模块的搭建

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>qingcheng_common_web</module>
         <module>qingcheng_web_portal</module>
         <module>qingcheng_service_sms</module>
+        <module>qingcheng_common_cas</module>
     </modules>
 
     <packaging>pom</packaging>
