--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>qingcheng_web_portal</module>
         <module>qingcheng_service_sms</module>
         <module>qingcheng_common_cas</module>
+        <module>qingcheng_web_center</module>
     </modules>
 
     <packaging>pom</packaging>
