--- a/qingcheng_service_goods/pom.xml
+++ b/qingcheng_service_goods/pom.xml
@@ -12,7 +12,11 @@
     <artifactId>qingcheng_service_goods</artifactId>
 
     <dependencies>
-
+        <dependency>
+            <groupId>org.springframework.amqp</groupId>
+            <artifactId>spring-rabbit</artifactId>
+            <version>2.1.4.RELEASE</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
