--- a/qingcheng_service_order/pom.xml
+++ b/qingcheng_service_order/pom.xml
@@ -13,6 +13,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.amqp</groupId>
+            <artifactId>spring-rabbit</artifactId>
+            <version>2.1.4.RELEASE</version>
+        </dependency>
+        <dependency>
             <groupId>com.qingcheng</groupId>
             <artifactId>qingcheng_interface</artifactId>
             <version>1.0-SNAPSHOT</version>
